--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@fortawesome/angular-fontawesome": "^0.15.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@ng-select/ng-select": "^13.9.1",
     "express": "^4.18.2",
+    "ngx-infinite-scroll": "^18.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.14.1",
     "tslib": "^2.3.0",
