--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@ng-select/ng-select": "^13.9.1",
+    "chart.js": "^4.4.6",
     "express": "^4.18.2",
     "ngx-infinite-scroll": "^18.0.0",
     "rxjs": "~7.8.0",
